--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
       crossorigin="anonymous"
     ></script>
-    <title>Shmup</title>
+    <title>S.H.I.P.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
